@@ -1,0 +1,8 @@
+plugins/interface_view.glade
+plugins/interface_view.py
+plugins/event_monitor.glade
+plugins/event_monitor.py
+plugins/api_view.py
+src/accerciser.glade
+src/lib/accerciser/accessible_treeview.py
+src/lib/accerciser/accerciser.py
