@@ -1,3 +1,7 @@
+2007-03-30 Peter Parente  <parente@cs.unc.edu>
+
+	* po/POTFILES.in: Added all translatable files
+
 2007-03-28  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.py: Expander labels show if a given
